# Finite-Automata---Math-CS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
automata/: L2Int1-7-1.txt  L2Int1-7-10.txt  L2Int1-7-11.txt  L2Int1-7-12.txt  L2Int1-7-13.txt  L2Int1-7-14.txt  L2Int1-7-15.txt  L2Int1-7-16.txt  L2Int1-7-17.txt  L2Int1-7-18.txt  L2Int1-7-19.txt  L2Int1-7-2.txt  L2Int1-7-20.txt  L2Int1-7-21.txt  L2Int1-7-22.txt  L2Int1-7-23.txt  L2Int1-7-24.txt  L2Int1-7-25.txt  L2Int1-7-26.txt  L2Int1-7-27.txt  L2Int1-7-28.txt  L2Int1-7-29.txt  L2Int1-7-3.txt  L2Int1-7-30.txt  L2Int1-7-31.txt  L2Int1-7-32.txt  L2Int1-7-33.txt  L2Int1-7-34.txt  L2Int1-7-35.txt  L2Int1-7-36.txt  L2Int1-7-37.txt  L2Int1-7-38.txt  L2Int1-7-39.txt  L2Int1-7-4.txt  L2Int1-7-40.txt  L2Int1-7-41.txt  L2Int1-7-42.txt  L2Int1-7-44.txt  L2Int1-7-5.txt  L2Int1-7-6.txt  (+3 more)
automata/test/: test.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  testRead.txt
src/: FA.cpp  FA.h  State.cpp  State.h  Transition.cpp  Transition.h  complementary.cpp  completion.cpp  completion.h  determinization.cpp  determinization.h  files.cpp  files.h  mainLoop.cpp  mainLoop.h  minimization.cpp  minimization.h  reading.cpp  reading.h  standardization.cpp
